--- a/projeto-redesnaoseioque/estilos/style.css
+++ b/projeto-redesnaoseioque/estilos/style.css
@@ -24,6 +24,25 @@ main {
     position: relative;
 }
 
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.637);
+    transform: translate(-3px, -3px);
+    box-shadow: 4px 4px 9px rgba(0, 0, 0, 0.623);
+    transition: transform .1s border 4s;
+}
+
 section#telefone {
     left: 50%;
     top: 50%;
@@ -35,15 +54,10 @@ section#telefone {
     background: url('../imagens/frame-iphone.png') no-repeat center center;
     background-size: contain;
 }
-
-iframe {
-    
-}
-
 iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 271px;
+    width: 267px;
     height: 471px;
 }
